test/shouldnt-compile/const-il-assign.cpp
#include "common.hpp"


void check() {
  const Enums e;
  e = {Enum::One};
}
